https://online.sbis.ru/opendoc.html?guid=2683f1ba-4206-4cee-9e6f-313835b09d43

--- a/Controls/_spoiler/Heading/_Heading.less
+++ b/Controls/_spoiler/Heading/_Heading.less
@@ -5,7 +5,8 @@
 }
 
 .controls-SpoilerHeading__icon {
-   margin: auto;
+   fill: none;
+   margin: 0 auto;
 }
 
 .controls-SpoilerHeading__caption_expanded {
@@ -14,7 +15,6 @@
 
 .controls-SpoilerHeading__iconWrapper {
    display: flex;
-   height: 100%;
    order: 1;
 }
 
@@ -35,19 +35,16 @@
 }
 
 .controls-SpoilerHeading__icon_theme-@{themeName} {
-   font-size: @icon-size_spoilerHeading;
-   line-height: @icon-size_spoilerHeading;
    width: @icon-size_spoilerHeading;
    height: @icon-size_spoilerHeading;
-   font-family: @icon_font-family_spoilerHeading;
 }
 
 .controls-SpoilerHeading__icon_expanded_theme-@{themeName} {
-   color: @icon-color_expanded_spoilerHeading;
+   stroke: @icon-color_expanded_spoilerHeading;
 }
 
 .controls-SpoilerHeading__icon_collapsed_theme-@{themeName} {
-   color: @icon-color_collapsed_spoilerHeading;
+   stroke: @icon-color_collapsed_spoilerHeading;
 }
 
 .controls-SpoilerHeading__caption_expanded_theme-@{themeName} {
@@ -61,11 +58,11 @@
 
 .ws-is-hover .controls-SpoilerHeading__wrapper:hover {
    .controls-SpoilerHeading__icon_expanded_theme-@{themeName} {
-      color: @icon-color_expanded_hover_spoilerHeading;
+      stroke: @icon-color_expanded_hover_spoilerHeading;
    }
 
    .controls-SpoilerHeading__icon_collapsed_theme-@{themeName} {
-      color: @icon-color_collapsed_hover_spoilerHeading;
+      stroke: @icon-color_collapsed_hover_spoilerHeading;
    }
 
    .controls-SpoilerHeading__caption_expanded_theme-@{themeName} {
