--- a/Controls/_editableArea/Templates/Editors/_Base.less
+++ b/Controls/_editableArea/Templates/Editors/_Base.less
@@ -1,9 +1,20 @@
 .controls-EditableArea__Text {
    flex-shrink: 1;
    display: inline-flex;
-   align-items: center;
-   box-sizing: border-box;
    width: 100%;
+   box-sizing: border-box;
+}
+.controls-EditableArea__Text__wrapper {
+   width: 100%;
+   height: 100%;
+   display: inline-flex;
+   align-items: baseline;
+}
+.controls-EditableArea__Text__baseline {
+   height: 100%;
+   display: flex;
+   user-select: none;
+   align-items: center;
 }
 
 .controls-EditableArea__Text_style_accentHeader {
