https://online.sbis.ru/opendoc.html?guid=bc4cab43-a6c8-4221-89e3-e0127493c9de

--- a/Controls/_list/ListView/_ListView.less
+++ b/Controls/_list/ListView/_ListView.less
@@ -249,7 +249,7 @@
    content: '\e000';
 }
 
-.controls-ListView__groupExpander:hover {
+.ws-is-hover .controls-ListView__groupExpander:hover {
    color: @grouping_expander_hover_text-color_list;
 }
 
