https://online.sbis.ru/opendoc.html?guid=c40dfbae-f8ed-449a-b1ba-39d70342a9eb

--- a/Controls-default-theme/aliases/_tile.less
+++ b/Controls-default-theme/aliases/_tile.less
@@ -34,6 +34,11 @@
 @item_border-color_tile:                    @border-color;
 @item_marked_border-color_tile:             @marker_color;
 
+// Операции над записью
+
+@itemActions_offset-right_tile:             0;
+@itemActions_offset-bottom_tile:            0;
+
 
 
 // Переменные для текстовой подписи в плитках
