--- a/Controls/_tile/TileView/_TileView.less
+++ b/Controls/_tile/TileView/_TileView.less
@@ -211,9 +211,9 @@
    border: @item_border-thickness_tile solid @item_marked_border-color_tile;
 }
 
-//TODO: Можно убрать после решения задачи: https://online.sbis.ru/opendoc.html?guid=38c5aa2c-f30c-42e9-a654-5358bc7691fd
+//TODO: Убрать перебитие, сделать отдельные классы в плитке и других списках
 .controls-itemActionsV.controls-TileView__itemActions {
-   padding: 0;
+   padding: 0 @itemActions_offset-right_tile @itemActions_offset-bottom_tile 0;
 }
 //TODO: end
 
