https://online.sbis.ru/opendoc.html?guid=8b1b6b16-ea80-4b1a-9fbe-907cf1a608a1

--- a/Controls-demo/Controls-demo.less
+++ b/Controls-demo/Controls-demo.less
@@ -60,6 +60,9 @@
 .controlsDemo_fixedWidth800 {
   width: 800px;
 }
+.controlsDemo_fixedWidth1700 {
+  width: 1700px;
+}
 
 .controlsDemo_widthFit {
   width: fit-content;
