https://online.sbis.ru/opendoc.html?guid=c87d5c81-7b4e-4446-a668-6394594da107

--- a/Controls/_list/ListView/_ListView.less
+++ b/Controls/_list/ListView/_ListView.less
@@ -231,7 +231,7 @@
    text-overflow: ellipsis;
 }
 
-.controls-ListView__groupExpander_theme-@{themeName} {
+.controls-ListView__groupExpander {
    cursor: pointer;
 }
 
