https://online.sbis.ru/opendoc.html?guid=6901dc6f-5bbb-4406-b1a5-2acdde6956d2

--- a/Controls-demo/Explorer/Demo/Demo.less
+++ b/Controls-demo/Explorer/Demo/Demo.less
@@ -5,9 +5,12 @@
    align-items: center;
 }
 
+.demo_Tile__scroll {
+   width: 50%;
+}
+
 .demo-Tile {
    .demo-Tile__static, .demo-Tile__dynamic {
-      width: 50%;
       margin-bottom: 30px;
    }
 }
