--- a/Controls/_buttons/_Button.less
+++ b/Controls/_buttons/_Button.less
@@ -3,7 +3,7 @@
    display: inline-block;
    box-sizing: border-box;
    text-decoration: none;
-   font-size: 0;
+   font-size: @font-size_default;
 }
 
 //root tag "a" should be without underline
