https://online.sbis.ru/opendoc.html?guid=f34264c9-5895-485a-b5cb-d5a45f0930a6

--- a/Controls/BlockLayout.less
+++ b/Controls/BlockLayout.less
@@ -54,6 +54,15 @@
       }
    });
 }
+// Набор классов для установки фона контрола через backgroundStyle
+.controls-background-BlockLayout__block {
+   .for(6, {
+      &_style_@{_i}_theme-@{themeName} {
+         background-color: ~"@{background-color_@{_i}_block}";
+      }
+   });
+}
+
 
 /**
  * TODO: pointer-events работает в ie начиная с 11 версии.
