--- a/Controls/_popupTemplate/Stack/_Stack.less
+++ b/Controls/_popupTemplate/Stack/_Stack.less
@@ -50,6 +50,10 @@
 .controls-StackTemplate__top-area-background_theme_@{themeName} {
    background: @header_background-color_stack;
 }
+// Класс для установки фона шапки контрола через backgroundStyle (stackHeader)
+.controls-background-stackHeader_theme-@{themeName} {
+   background-color: @header_background-color_stack;
+}
 
 .controls-StackTemplate__top-area-border_theme_@{themeName} {
    border-bottom: @header_bottom-border-thickness_stack solid @header_bottom-border-color_stack;
