--- a/Controls-demo/Controls-demo.less
+++ b/Controls-demo/Controls-demo.less
@@ -1,6 +1,10 @@
 @spacing_demo_default: 12px;
 @spacing_demo_default_controls: 4px;
 
+.controlsDemo__icon_active {
+  cursor: pointer;
+}
+
 .controlsDemo__wrapper {
   padding: @spacing_demo_default;
 }
