https://online.sbis.ru/opendoc.html?guid=55f3533b-5461-4544-9444-8d036060bde8

--- a/Controls/_list/ListView/_ListView.less
+++ b/Controls/_list/ListView/_ListView.less
@@ -424,3 +424,7 @@
 .controls-ListView__groupContent_align-right {
    justify-content: flex-end;
 }
+
+.controls-ListView__groupContent_align-center {
+   justify-content: center;
+}
