https://online.sbis.ru/doc/fb2df39f-b573-46e6-9446-f470c902d851

--- a/Controls/_list/ListView/_ListView.less
+++ b/Controls/_list/ListView/_ListView.less
@@ -62,47 +62,56 @@
 }
 
 .controls-ListView__itemContent_withCheckboxes,
-.controls-ListView__groupContent__leftPadding_withCheckboxes {
+.controls-ListView__groupContent__leftPadding_withCheckboxes,
+.controls-ListView__footer__paddingLeft_withCheckboxes {
    padding-left: @checkbox_offset-left_list + @click-area_width_checkbox;
 }
 
 .controls-ListView__item-leftPadding_default,
-.controls-ListView__groupContent__leftPadding_default {
+.controls-ListView__groupContent__leftPadding_default,
+.controls-ListView__footer__paddingLeft_default {
    padding-left: @item_padding-left_l_old_list;
 }
 
 .controls-ListView__item-leftPadding_null,
-.controls-ListView__groupContent__leftPadding_null {
+.controls-ListView__groupContent__leftPadding_null,
+.controls-ListView__footer__paddingLeft_null {
    padding-left: 0;
 }
 
 .controls-ListView__item-leftPadding_xs,
-.controls-ListView__groupContent__leftPadding_xs {
+.controls-ListView__groupContent__leftPadding_xs,
+.controls-ListView__footer__paddingLeft_xs {
    padding-left: @item_padding-left_xs_list;
 }
 
 .controls-ListView__item-leftPadding_s,
-.controls-ListView__groupContent__leftPadding_s {
+.controls-ListView__groupContent__leftPadding_s,
+.controls-ListView__footer__paddingLeft_s {
    padding-left: @item_padding-left_s_old_list;
 }
 
 .controls-ListView__item-leftPadding_m,
-.controls-ListView__groupContent__leftPadding_m {
+.controls-ListView__groupContent__leftPadding_m,
+.controls-ListView__footer__paddingLeft_m {
    padding-left: @item_padding-left_m_old_list;
 }
 
 .controls-ListView__item-leftPadding_l,
-.controls-ListView__groupContent__leftPadding_l {
+.controls-ListView__groupContent__leftPadding_l,
+.controls-ListView__footer__paddingLeft_l {
    padding-left: @item_padding-left_l_old_list;
 }
 
 .controls-ListView__item-leftPadding_xl,
-.controls-ListView__groupContent__leftPadding_xl {
+.controls-ListView__groupContent__leftPadding_xl,
+.controls-ListView__footer__paddingLeft_xl {
    padding-left: @item_padding-left_xl_old_list;
 }
 
 .controls-ListView__item-leftPadding_xxl,
-.controls-ListView__groupContent__leftPadding_xxl {
+.controls-ListView__groupContent__leftPadding_xxl,
+.controls-ListView__footer__paddingLeft_xxl {
    padding-left: @item_padding-left_2xl_list;
 }
 
