--- a/Controls/_popupConfirmation.less
+++ b/Controls/_popupConfirmation.less
@@ -1,2 +1,2 @@
-@import "Controls/_popupConfirmation/style.less";
-@import "Controls/_popupConfirmation/Opener/Dialog/style.less";
+@import "Controls/_popupConfirmation/_style";
+@import "Controls/_popupConfirmation/Opener/Dialog/_style";
