--- a/Controls/_grid/layout/grid/_Grid.less
+++ b/Controls/_grid/layout/grid/_Grid.less
@@ -19,7 +19,7 @@
    left: 0;
 }
 
-.controls-GridView-without-rowSeparator_item_marker_theme-@{themeName} {
+.controls-Grid__row-cell_withoutRowSeparator_theme-@{themeName} .controls-GridView-without-rowSeparator_item_marker_theme-@{themeName} {
    height: ~'calc(100% + @{item-separator_s_thickness_list})';
    top: -@item-separator_s_thickness_list;
 }
