--- a/Controls/_list/ListView/_ListView.less
+++ b/Controls/_list/ListView/_ListView.less
@@ -7,7 +7,7 @@
                @content_l_padding_loadingIndicator * 2;
 }
 
-.controls-ListView__itemV .controls-ListView__itemV_marker_theme-@{themeName} {
+.controls-ListView__itemV_marker_theme-@{themeName} {
    position: absolute;
    width: @marker_thickness_list;
    background-color: @marker_color_list;
