https://online.sbis.ru/opendoc.html?guid=1ae09b30-2bfd-425c-86e5-0d6d17264ba8

--- a/Controls/_menu/Control/_Control.less
+++ b/Controls/_menu/Control/_Control.less
@@ -127,7 +127,9 @@
 }
 
 .controls-Menu__content-wrapper {
-   .text-overflow();
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .controls-Menu__content-readOnly {
