Только привел в порядок межстрочный

--- a/Controls/_grid/_Grid.less
+++ b/Controls/_grid/_Grid.less
@@ -1,3 +1,5 @@
 @import "./layout/common/_RowSeparator";
+@import "./layout/common/_ColumnSeparator";
+@import "./layout/common/offsets/_Cell";
 @import "./layout/grid/_Grid";
 @import "./layout/table/_Table";
