--- a/Controls/_Classes.less
+++ b/Controls/_Classes.less
@@ -36,7 +36,7 @@
 //todo change font icons to svg https://online.sbis.ru/opendoc.html?guid=90761cbd-04f8-4fad-be7d-8c1707bdd30e
 //icon-24 font has a problem with baseline in FF IE
 //important is for cases when non-theme css loads after theme css
-//increase the weight of the selector so that no one class interrupts the styles
+//increase the weight of the selector so that no one class interrupts the styles (oldCss.less: .icon-medium)
 body .controls-icon_size-m_theme-@{themeName} when not(@icon_font-family_m = 'cbuc-icons') {
   line-height: @icon-size_m - 1 !important;
 }
